@@ -16,13 +16,16 @@ import org.elasticsearch.client.WarningFailureException;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Template;
 import org.elasticsearch.cluster.routing.allocation.DataTier;
+import org.elasticsearch.cluster.routing.allocation.decider.EnableAllocationDecider;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.XContentHelper;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.test.rest.ESRestTestCase;
+import org.elasticsearch.test.rest.ObjectPath;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentType;
+import org.elasticsearch.xpack.TimeSeriesRestDriver;
 import org.elasticsearch.xpack.core.ilm.AllocateAction;
 import org.elasticsearch.xpack.core.ilm.DeleteAction;
 import org.elasticsearch.xpack.core.ilm.ForceMergeAction;
@@ -61,10 +64,14 @@ import static org.elasticsearch.xpack.TimeSeriesRestDriver.getStepKeyForIndex;
 import static org.elasticsearch.xpack.TimeSeriesRestDriver.indexDocument;
 import static org.elasticsearch.xpack.TimeSeriesRestDriver.rolloverMaxOneDocCondition;
 import static org.elasticsearch.xpack.core.ilm.DeleteAction.WITH_SNAPSHOT_DELETE;
+import static org.elasticsearch.xpack.core.ilm.SearchableSnapshotAction.FORCE_MERGE_CLONE_INDEX_PREFIX;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.endsWith;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.lessThanOrEqualTo;
+import static org.hamcrest.Matchers.startsWith;
 
 public class SearchableSnapshotActionIT extends ESRestTestCase {
 
@@ -121,65 +128,94 @@ public class SearchableSnapshotActionIT extends ESRestTestCase {
         );
     }
 
-    public void testSearchableSnapshotForceMergesIndexToOneSegment() throws Exception {
-        createSnapshotRepo(client(), snapshotRepo, randomBoolean());
-        createNewSingletonPolicy(client(), policy, "cold", new SearchableSnapshotAction(snapshotRepo, true));
+    /**
+     * Test that when we have a searchable snapshot action with force merge enabled and the source index has _at least one_ replica,
+     * we perform the force merge on _the cloned index_ with 0 replicas and then snapshot the clone.
+     * We also sometimes artificially "pause" ILM on the clone step to allow us to assert that the cloned index has the correct settings.
+     * We do this by disabling allocation in the whole cluster, which means the clone step cannot complete as none of its shards can
+     * allocate. After re-enabling allocation, we check that the remainder of the action completes as expected.
+     */
+    public void testSearchableSnapshotForceMergesClonedIndex() throws Exception {
+        final int numberOfPrimaries = randomIntBetween(1, 3);
+        // The test suite runs with 4 nodes, so we can have up to 3 (allocated) replicas.
+        final int numberOfReplicas = randomIntBetween(1, 3);
+        final String phase = randomBoolean() ? "cold" : "frozen";
+        final String backingIndexName = prepareDataStreamWithDocs(phase, numberOfPrimaries, numberOfReplicas);
 
-        createComposableTemplate(
-            client(),
-            randomAlphaOfLengthBetween(5, 10).toLowerCase(Locale.ROOT),
-            dataStream,
-            new Template(null, null, null)
-        );
-
-        for (int i = 0; i < randomIntBetween(5, 10); i++) {
-            indexDocument(client(), dataStream, true);
+        final boolean pauseOnClone = randomBoolean();
+        if (pauseOnClone) {
+            logger.info("--> pausing test on index clone step");
+            configureClusterAllocation(false);
         }
+        try {
+            // Enable/start ILM on the data stream.
+            updateIndexSettings(dataStream, Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policy));
 
-        List<String> backingIndices = getDataStreamBackingIndexNames(dataStream);
-        String backingIndexName = backingIndices.getFirst();
-        Integer preLifecycleBackingIndexSegments = getNumberOfPrimarySegments(client(), backingIndexName);
-        assertThat(preLifecycleBackingIndexSegments, greaterThanOrEqualTo(1));
+            if (pauseOnClone) {
+                assertForceMergeCloneIndexSettings(backingIndexName, numberOfPrimaries);
+                configureClusterAllocation(true);
+            }
 
-        // rolling over the data stream so we can apply the searchable snapshot policy to a backing index that's not the write index
-        rolloverMaxOneDocCondition(client(), dataStream);
+            assertForceMergedSnapshotDone(phase, backingIndexName, numberOfPrimaries, true);
+        } catch (Exception | AssertionError e) {
+            // Make sure we re-enable allocation in case of failure so that the remaining tests in the suite are not affected.
+            configureClusterAllocation(true);
+            throw e;
+        }
+    }
 
+    /**
+     * Test that when we have a searchable snapshot action with force merge enabled and the source index has _zero_ replicas,
+     * we perform the force merge on the _source_ index and snapshot the source index.
+     */
+    public void testSearchableSnapshotForceMergesSourceIndex() throws Exception {
+        // Data streams have 1 primary shard by default.
+        // The test suite runs with 4 nodes, so we can have up to 3 (allocated) replicas.
+        final String phase = randomBoolean() ? "cold" : "frozen";
+        final int numberOfPrimaries = 1;
+        final String backingIndexName = prepareDataStreamWithDocs(phase, numberOfPrimaries, 0);
+
+        // Enable/start ILM on the data stream.
         updateIndexSettings(dataStream, Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policy));
-        assertTrue(waitUntil(() -> {
-            try {
-                Integer numberOfSegments = getNumberOfPrimarySegments(client(), backingIndexName);
-                logger.info("index {} has {} segments", backingIndexName, numberOfSegments);
-                // this is a loose assertion here as forcemerge is best effort
-                if (preLifecycleBackingIndexSegments > 1) {
-                    return numberOfSegments < preLifecycleBackingIndexSegments;
-                } else {
-                    // the index had only one segement to start with so nothing to assert
-                    return true;
-                }
-            } catch (Exception e) {
-                try {
-                    // if ILM executed the action already we don't have an index to assert on so we don't fail the test
-                    return indexExists(backingIndexName) == false;
-                } catch (IOException ex) {
-                    return false;
-                }
-            }
-        }, 60, TimeUnit.SECONDS));
 
-        String restoredIndexName = SearchableSnapshotAction.FULL_RESTORED_INDEX_PREFIX + backingIndexName;
-        assertTrue(waitUntil(() -> {
-            try {
-                return indexExists(restoredIndexName);
-            } catch (IOException e) {
-                return false;
-            }
-        }, 60, TimeUnit.SECONDS));
+        assertForceMergedSnapshotDone(phase, backingIndexName, numberOfPrimaries, false);
+    }
 
-        assertBusy(
-            () -> { assertThat(explainIndex(client(), restoredIndexName).get("step"), is(PhaseCompleteStep.NAME)); },
-            30,
-            TimeUnit.SECONDS
-        );
+    /**
+     * Test that when we have a searchable snapshot action with force merge enabled and the source index has _at least one_ replica,
+     * we perform the force merge on _the cloned index_ with 0 replicas and then snapshot the clone.
+     * This test simulates a failure during the clone step by pausing ILM on the clone step and then moving the index back to the cleanup
+     * step. We need to resort to simulation, as triggering the threshold in the ClusterStateWaitUntilThresholdStep is not feasible in a
+     * Java REST test. After re-enabling allocation, we check that the remainder of the action completes as expected.
+     */
+    public void testSearchableSnapshotForceMergesClonedIndexAfterRetry() throws Exception {
+        final int numberOfPrimaries = randomIntBetween(1, 3);
+        final int numberOfReplicas = randomIntBetween(1, 3);
+        final String phase = randomBoolean() ? "cold" : "frozen";
+        final String backingIndexName = prepareDataStreamWithDocs(phase, numberOfPrimaries, numberOfReplicas);
+
+        configureClusterAllocation(false);
+        try {
+            // Enable/start ILM on the data stream.
+            updateIndexSettings(dataStream, Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policy));
+
+            assertForceMergeCloneIndexSettings(backingIndexName, numberOfPrimaries);
+
+            TimeSeriesRestDriver.moveIndexToStep(
+                client(),
+                backingIndexName,
+                new Step.StepKey(phase, "searchable_snapshot", "clone"),
+                new Step.StepKey(phase, "searchable_snapshot", "cleanup-generated-index")
+            );
+
+            configureClusterAllocation(true);
+
+            assertForceMergedSnapshotDone(phase, backingIndexName, numberOfPrimaries, true);
+        } catch (Exception | AssertionError e) {
+            // Make sure we re-enable allocation in case of failure so that the remaining tests in the suite are not affected.
+            configureClusterAllocation(true);
+            throw e;
+        }
     }
 
     @SuppressWarnings("unchecked")
@@ -306,8 +342,8 @@ public class SearchableSnapshotActionIT extends ESRestTestCase {
         // rolling over the data stream so we can apply the searchable snapshot policy to a backing index that's not the write index
         indexDocument(client(), dataStream, true);
 
-        var backingIndices = getDataStreamBackingIndexNames(dataStream);
-        String restoredIndexName = SearchableSnapshotAction.FULL_RESTORED_INDEX_PREFIX + backingIndices.get(0);
+        String backingIndexName = getDataStreamBackingIndexNames(dataStream).getFirst();
+        String restoredIndexName = SearchableSnapshotAction.FULL_RESTORED_INDEX_PREFIX + backingIndexName;
         assertTrue(waitUntil(() -> {
             try {
                 return indexExists(restoredIndexName);
@@ -321,6 +357,8 @@ public class SearchableSnapshotActionIT extends ESRestTestCase {
             assertThat(stepKeyForIndex.phase(), is("hot"));
             assertThat(stepKeyForIndex.name(), is(PhaseCompleteStep.NAME));
         }, 30, TimeUnit.SECONDS);
+        // Wait for the original index to be deleted, to ensure ILM has finished
+        awaitIndexDoesNotExist(backingIndexName);
 
         createPolicy(
             client(),
@@ -398,6 +436,8 @@ public class SearchableSnapshotActionIT extends ESRestTestCase {
             assertThat(stepKeyForIndex.phase(), is("hot"));
             assertThat(stepKeyForIndex.name(), is(PhaseCompleteStep.NAME));
         }, 30, TimeUnit.SECONDS);
+        // Wait for the original index to be deleted, to ensure ILM has finished
+        awaitIndexDoesNotExist(backingIndexName);
 
         // snapshot the data stream
         String dsSnapshotName = "snapshot_ds_" + dataStream;
@@ -502,6 +542,8 @@ public class SearchableSnapshotActionIT extends ESRestTestCase {
             assertThat(stepKeyForIndex.phase(), is("cold"));
             assertThat(stepKeyForIndex.name(), is(PhaseCompleteStep.NAME));
         }, 30, TimeUnit.SECONDS);
+        // Wait for the original index to be deleted, to ensure ILM has finished
+        awaitIndexDoesNotExist(index);
 
         Request getSnaps = new Request("GET", "/_snapshot/" + snapshotRepo + "/_all");
         Response response = client().performRequest(getSnaps);
@@ -563,6 +605,8 @@ public class SearchableSnapshotActionIT extends ESRestTestCase {
             assertThat(stepKeyForIndex.phase(), is("frozen"));
             assertThat(stepKeyForIndex.name(), is(PhaseCompleteStep.NAME));
         }, 30, TimeUnit.SECONDS);
+        // Wait for the original index to be deleted, to ensure ILM has finished
+        awaitIndexDoesNotExist(index);
 
         Request getSnaps = new Request("GET", "/_snapshot/" + snapshotRepo + "/_all");
         Response response = client().performRequest(getSnaps);
@@ -889,8 +933,8 @@ public class SearchableSnapshotActionIT extends ESRestTestCase {
         // searchable snapshots mounted in the hot phase should be pinned to hot nodes
         assertThat(hotIndexSettings.get(DataTier.TIER_PREFERENCE), is("data_hot"));
 
-        assertOK(client().performRequest(new Request("DELETE", "_data_stream/" + dataStream)));
-        assertOK(client().performRequest(new Request("DELETE", "_ilm/policy/" + policy)));
+        // Wait for the original index to be deleted, to ensure ILM has finished
+        awaitIndexDoesNotExist(firstGenIndex);
     }
 
     // See: https://github.com/elastic/elasticsearch/issues/77269
@@ -978,6 +1022,8 @@ public class SearchableSnapshotActionIT extends ESRestTestCase {
             assertThat(stepKeyForIndex.phase(), is("frozen"));
             assertThat(stepKeyForIndex.name(), is(PhaseCompleteStep.NAME));
         }, 30, TimeUnit.SECONDS);
+        // Wait for the original index to be deleted, to ensure ILM has finished
+        awaitIndexDoesNotExist(index);
 
         // validate total_shards_per_node setting
         Map<String, Object> indexSettings = getIndexSettingsAsMap(searchableSnapMountedIndexName);
@@ -1053,6 +1099,8 @@ public class SearchableSnapshotActionIT extends ESRestTestCase {
             Integer numberOfReplicas = Integer.valueOf((String) indexSettings.get(INDEX_NUMBER_OF_REPLICAS_SETTING.getKey()));
             assertThat(numberOfReplicas, is(1));
         }
+        // Wait for the original index to be deleted, to ensure ILM has finished
+        awaitIndexDoesNotExist(backingIndexName);
 
         // tweak the policy to replicate_for hardly any time at all
         createPolicy(
@@ -1100,5 +1148,154 @@ public class SearchableSnapshotActionIT extends ESRestTestCase {
         String action = (String) indexResponse.get("action");
         String step = (String) indexResponse.get("step");
         return new Step.StepKey(phase, action, step);
+    }
+
+    /**
+     * Prepares a data stream with the specified number of primary and replica shards,
+     * creates a snapshot repository and ILM policy, applies a composable template,
+     * indexes several documents, and performs a rollover. Returns the name of the
+     * first generation backing index.
+     */
+    private String prepareDataStreamWithDocs(String phase, int numberOfPrimaries, int numberOfReplicas) throws Exception {
+        logger.info(
+            "--> running [{}] with [{}] primaries, [{}] replicas, in phase [{}}",
+            getTestName(),
+            numberOfPrimaries,
+            numberOfReplicas,
+            phase
+        );
+        createSnapshotRepo(client(), snapshotRepo, randomBoolean());
+        createNewSingletonPolicy(client(), policy, phase, new SearchableSnapshotAction(snapshotRepo, true));
+
+        createComposableTemplate(
+            client(),
+            randomAlphaOfLengthBetween(5, 10).toLowerCase(Locale.ROOT),
+            dataStream,
+            new Template(indexSettings(numberOfPrimaries, numberOfReplicas).build(), null, null)
+        );
+        for (int i = 0; i < randomIntBetween(5, 10); i++) {
+            indexDocument(client(), dataStream, true);
+        }
+        final var backingIndexName = getDataStreamBackingIndexNames(dataStream).getFirst();
+
+        // Retrieve the number of segments in the first (random) shard of the backing index.
+        final Integer preLifecycleBackingIndexSegments = getNumberOfPrimarySegments(client(), backingIndexName);
+        // If we have only one primary shard, we expect at least one segment. We're hoping to get multiple segments, but we can't guarantee
+        // that, so we have to resort to a "greater than or equal to" check.
+        if (numberOfPrimaries == 1) {
+            assertThat(preLifecycleBackingIndexSegments, greaterThanOrEqualTo(1));
+        } else {
+            // With multiple primary shards, the segments are more spread out, so it's even less likely that we'll get more than 1 segment
+            // in one shard, and some shards might even be empty.
+            assertThat(preLifecycleBackingIndexSegments, greaterThanOrEqualTo(0));
+        }
+
+        // Rolling over the data stream so we can apply the searchable snapshot policy to a backing index that's not the write index.
+        rolloverMaxOneDocCondition(client(), dataStream);
+        // Wait for all shards to be allocated.
+        ensureGreen(dataStream);
+        return backingIndexName;
+    }
+
+    /**
+     * Waits for the force-merge clone index to exist and asserts that it has the correct number of primary shards and zero replicas,
+     * and that its name follows the expected naming convention.
+     */
+    private static void assertForceMergeCloneIndexSettings(String backingIndexName, int numberOfPrimaries) throws Exception {
+        final String forceMergeIndexPattern = FORCE_MERGE_CLONE_INDEX_PREFIX + "*" + backingIndexName;
+        assertBusy(() -> {
+            // The force-merged index is hidden, so we need to expand wildcards.
+            Request request = new Request("GET", "/" + forceMergeIndexPattern + "/_settings?expand_wildcards=all&flat_settings=true");
+            Response response = client().performRequest(request);
+            final Map<String, Object> indicesSettings = entityAsMap(response);
+            assertThat(
+                "expected only settings for index: " + forceMergeIndexPattern + ", but got " + indicesSettings,
+                indicesSettings.size(),
+                equalTo(1)
+            );
+            final String forceMergeCloneIndexName = indicesSettings.keySet().iterator().next();
+            assertThat(forceMergeCloneIndexName, startsWith(FORCE_MERGE_CLONE_INDEX_PREFIX));
+            assertThat(forceMergeCloneIndexName, endsWith(backingIndexName));
+            @SuppressWarnings("unchecked")
+            final var forceMergeIndexResponse = (Map<String, Object>) indicesSettings.get(forceMergeCloneIndexName);
+            @SuppressWarnings("unchecked")
+            final Map<String, Object> forceMergeIndexSettings = (Map<String, Object>) forceMergeIndexResponse.get("settings");
+            assertThat(forceMergeIndexSettings.get("index.number_of_shards"), equalTo(String.valueOf(numberOfPrimaries)));
+            assertThat(forceMergeIndexSettings.get("index.number_of_replicas"), equalTo("0"));
+        });
+    }
+
+    /**
+     * Asserts that the restored searchable snapshot index exists, the original and force-merge clone indices are deleted,
+     * and the restored index has the expected number of segments. Also verifies the snapshot index naming conventions.
+     *
+     * @param phase The phase of the ILM policy that the searchable snapshot action runs in.
+     * @param backingIndexName The original backing index name.
+     * @param numberOfPrimaries The number of primaries that the original backing index had, affecting segment count assertions.
+     * @param withReplicas True if the original backing index had one or more replicas, affecting snapshot index naming assertions.
+     */
+    private void assertForceMergedSnapshotDone(String phase, String backingIndexName, int numberOfPrimaries, boolean withReplicas)
+        throws Exception {
+        final String prefix = phase.equals("cold")
+            ? SearchableSnapshotAction.FULL_RESTORED_INDEX_PREFIX
+            : SearchableSnapshotAction.PARTIAL_RESTORED_INDEX_PREFIX;
+        final String restoredIndexName = prefix + backingIndexName;
+        awaitIndexExists(restoredIndexName);
+
+        assertBusy(() -> assertThat(explainIndex(client(), restoredIndexName).get("step"), is(PhaseCompleteStep.NAME)));
+        // Wait for the original index to be deleted, to ensure ILM has finished
+        awaitIndexDoesNotExist(backingIndexName);
+        // Regardless of whether we force merged the backing index or a clone, the cloned index should not exist (anymore).
+        awaitIndexDoesNotExist(FORCE_MERGE_CLONE_INDEX_PREFIX + "-*-" + backingIndexName);
+
+        // Retrieve the total number of segments across all primary shards of the restored index.
+        final Integer numberOfPrimarySegments = getNumberOfPrimarySegments(client(), restoredIndexName);
+        // If the backing index had multiple primaries, some primaries might be empty, but others should have no more than 1 segment.
+        if (numberOfPrimaries > 1 || phase.equals("frozen")) {
+            assertThat(numberOfPrimarySegments, lessThanOrEqualTo(numberOfPrimaries));
+        } else {
+            // If the backing index had only one primary, we expect exactly 1 segment after force merging.
+            assertThat(numberOfPrimarySegments, equalTo(1));
+        }
+
+        // We can't assert the replicas of the mounted snapshot as it's created with 0 replicas by default, but we can at least assert
+        // that the mounted snapshot was taken from the correct source index.
+        final List<Map<String, Object>> snapshots = getSnapshots();
+        assertThat("expected to have only one snapshot, but got: " + snapshots, snapshots.size(), equalTo(1));
+        final Map<String, Object> snapshot = snapshots.getFirst();
+        @SuppressWarnings("unchecked")
+        final List<String> indices = (List<String>) snapshot.get("indices");
+        assertThat("expected to have only one index, but got: " + indices, indices.size(), equalTo(1));
+        final String snapshotIndexName = indices.getFirst();
+        // If the backing index had replicas, we force merged a clone, so the snapshot index name should match the clone naming pattern.
+        if (withReplicas) {
+            assertThat(
+                "expected index to start with the force merge prefix",
+                snapshotIndexName,
+                startsWith(FORCE_MERGE_CLONE_INDEX_PREFIX)
+            );
+            assertThat("expected index to end with the backing index name", snapshotIndexName, endsWith(backingIndexName));
+        } else {
+            // If the backing index had no replicas, we force merged the backing index itself, so the snapshot index name should be equal
+            // to the backing index name.
+            assertThat("expected index to be the backing index name", snapshotIndexName, equalTo(backingIndexName));
+        }
+    }
+
+    private List<Map<String, Object>> getSnapshots() throws IOException {
+        Request getSnaps = new Request("GET", "/_snapshot/" + snapshotRepo + "/_all");
+        Response response = client().performRequest(getSnaps);
+        ObjectPath objectPath = ObjectPath.createFromResponse(response);
+        return objectPath.evaluate("snapshots");
+    }
+
+    /**
+     * Updates the cluster settings to enable or disable shard allocation in the whole cluster.
+     */
+    private static void configureClusterAllocation(boolean enable) throws IOException {
+        final String value = enable ? null : "none";
+        updateClusterSettings(
+            Settings.builder().put(EnableAllocationDecider.CLUSTER_ROUTING_ALLOCATION_ENABLE_SETTING.getKey(), value).build()
+        );
     }
 }
